--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
-.App {
+.App>* {
     transition: all .5s;
+}
+
+.form-check-input:checked{
+    background-color: var(--accent) !important;
+    border-color: var(--accent)!important;
+}
+.form-check-label {
+    color:var(--text-primary)!important;
 }
