--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,23 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+	margin: 0;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+		'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+		sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
 }
 
 :root {
-  --background: white;
-  --text-primary: black;
-  --text-secondary: royalblue;
-  --accent: purple;
+	--background: rgb(255,255,255);
+	--components-background: rgb(239, 239, 239);
+	--text-primary: rgb(33, 33, 33);
+	--text-secondary: rgb(0, 139, 105);
+	--accent: rgb(5, 193, 156);
 }
 [data-theme='dark'] {
-  --background: black;
-  --text-primary: white;
-  --text-secondary: grey;
-  --accent: darkred;
+	--background: rgb(66,66,66);
+	--components-background: rgb(33, 33, 33);
+	--text-primary: rgb(239,239,239);
+	--text-secondary: rgb(205, 211, 213);
+	--accent: rgb(195, 60, 84);
 }
