--- a/src/pages/Profile.module.css
+++ b/src/pages/Profile.module.css
@@ -1,27 +1,34 @@
-.profile-card {
-	width: 200px;
+.profile .profile-card {
+	width: 600px;
 	max-width: 100%;
-	margin: 30px auto;
+	margin: 0 auto;
+	background-color: var(--background);
+	color: var(--text-primary);
+	border-color: var(--card-border);
+}
+.profile .img {
+	display: block;
+	width:100px;
+	border-radius: 50%;
+	margin: 0 auto;
+	margin-bottom: 20px;
+}
+
+.profile .list-item {
 	background-color: var(--background);
 	color: var(--text-primary);
 	border-color: var(--card-border);
 }
 
-.list-item {
-	background-color: var(--background);
-	color: var(--text-primary);
-	border-color: var(--card-border);
-}
-
-@media (min-width: 550px) {
-	.profile-card {
+/* @media (min-width: 550px) {
+	.profile .profile-card {
 		flex-direction: row;
 		align-items: center;
 		width: 600px;
 	}
-	.profile-card img {
+	.profile .profile-card img {
 		width: 40%;
 		border-top-right-radius: 0;
 		border-bottom-left-radius: calc(0.25rem - 1px);
 	}
-}
+} */
