--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ body {
 	--text-secondary: rgb(0, 139, 105);
 	--accent: rgb(5, 193, 156);
 	--card-border: rgba(0, 0, 0, 0.125);
+	--text-constant:rgb(33, 33, 33);
 }
 [data-theme='dark'] {
 	--background: rgb(66, 66, 66);
